a1/a1-grade_feedback-kokiitagaki.txt
SENG 265 -- SPRING 2023
ASSIGNMENT #1 EVALUATION
========================

Student name:   Koki Itagaki
Student number: V00034442
Student login:  kokiitagaki

-----
(1) route_manager.c submitted and named appropriately; compiles and runs
without errors or warnings.

- Yes, it was.

See compilation output below:
./compile.py (INFO): Compiling route_manager.c using "gcc route_manager.c -o route_manager"...
route_manager.c: In function ‘printflight’:
route_manager.c:233:1: error: version control conflict marker in file
  233 | <<<<<<< HEAD
      | ^~~~~~~
route_manager.c: At top level:
route_manager.c:235:1: error: version control conflict marker in file
  235 | =======
      | ^~~~~~~
route_manager.c:238:1: error: version control conflict marker in file
  238 | >>>>>>> 627345ce7f0b82419a260a6d8385c522168f7a4d
      | ^~~~~~~
route_manager.c:238:9: error: invalid suffix "ce7f0b82419a260a6d8385c522168f7a4d" on integer constant
  238 | >>>>>>> 627345ce7f0b82419a260a6d8385c522168f7a4d
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./compile.py (INFO): info/warning/error messages from compilation shown above.

-REGRADE: All tests passed.

-----
(2) Tests passed (and further comments)

- REGRADE: All passed.

-----
(3) Code formatting and structure:


Positive aspects:

- Good formatting, naming of variables and documentation.

Improvement opportunities:

- Avoid having large functions.

-----

GRADE: A+
MARKS: 95
